--- a/buy_products.html
+++ b/buy_products.html
@@ -62,7 +62,7 @@
                 <br>
                 <p>Rupee 9,000</p>
                 <br>
-                <button class="add-to-cart" data-product="BALLER" data-image="https://imgs.search.brave.com/C0kR0ZD3syOLiv-dt8S_Rk6dyKcmB8zVgEXP2uoXa1k/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGVlcmUuY29tL2Fz/c2V0cy9pbWFnZXMv/aGF5LWZvcmFnZS9i/YWxpbmcvcm91bmQt/YmFsZXIvNTYxLUJh/bGVyLWhheS1mb3Jh/Z2UtYmFsaW5nLXBh/Z2UtMTAyNHg1NzYu/anBn">Add to Cart</button>
+                <button class="add-to-cart" data-product="BALLER" data-image="https://imgs.search.brave.com/C0kR0ZD3syOLiv-dt8S_Rk6dyKcmB8zVgEXP2uoXa1k/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGVlcmUuY29tL2Fz/c2V0cy9pbWFnZXMv/aGF5LWZvcmFnZS9i/YWxpbmcvcm91bmQt/YmFsZXIvNTYxLUJh/bGVyLWhheS1mb3Jh/Z2UtYmFsaW5nLXBh/Z2UtMTAyNHg1NzYu/anBn" data-price=9000>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -72,7 +72,7 @@
                 <br>
                 <p>Rupee 12,000</p>
                 <br>
-                <button class="add-to-cart" data-product="ELECTRIC LAWN MOWERS" data-image="https://imgs.search.brave.com/g0fGmy5knehlgFMYdjcTu15Ta49Wk89nql-EkNI8AKE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL3ZhZGVyLXBy/b2QuczMuYW1hem9u/YXdzLmNvbS8xNjgy/OTcxNTM3LTE2ODEz/MzE1MTEtZWNoby1k/bG0yMTAwLXNwLTY0/NTAxYjdhMmQzYjgu/anBnP2Nyb3A9MXh3/OjF4aDtjZW50ZXIs/dG9wJnJlc2l6ZT05/ODA6Kg">Add to Cart</button>
+                <button class="add-to-cart" data-product="ELECTRIC LAWN MOWERS" data-image="https://imgs.search.brave.com/g0fGmy5knehlgFMYdjcTu15Ta49Wk89nql-EkNI8AKE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL3ZhZGVyLXBy/b2QuczMuYW1hem9u/YXdzLmNvbS8xNjgy/OTcxNTM3LTE2ODEz/MzE1MTEtZWNoby1k/bG0yMTAwLXNwLTY0/NTAxYjdhMmQzYjgu/anBnP2Nyb3A9MXh3/OjF4aDtjZW50ZXIs/dG9wJnJlc2l6ZT05/ODA6Kg" data-price=12000>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -82,7 +82,7 @@
                 <br>
                 <p>Rupee 2,000 (set of 3)</p>
                 <br>
-                <button class="add-to-cart" data-product="PESTICIDE SPRAY BOTTLES- 30 litre" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/660692c512c5eb4895a92c96/garden-sprayer-pump-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="PESTICIDE SPRAY BOTTLES- 30 litre" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/660692c512c5eb4895a92c96/garden-sprayer-pump-480x480.jpg" data-price=2000>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -92,7 +92,7 @@
                 <br>
                 <p>Rupee 800</p>
                 <br>
-                <button class="add-to-cart" data-product="FRUIT PLUCKER" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069a53b5380238a1888d6c/bharat-agrotech-mango-plucker-tools-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="FRUIT PLUCKER" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069a53b5380238a1888d6c/bharat-agrotech-mango-plucker-tools-480x480.jpg" data-price=800>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -102,7 +102,7 @@
                 <br>
                 <p>Rupee 400 (1 set of pair)</p>
                 <br>
-                <button class="add-to-cart" data-product="RUBBER HAND GLOVES" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/660682ff8cc79cd761d822ca/surf-322c-70-industrial-rubber-gloves-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="RUBBER HAND GLOVES" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/660682ff8cc79cd761d822ca/surf-322c-70-industrial-rubber-gloves-480x480.jpg" data-price=400>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -112,7 +112,7 @@
                 <br>
                 <p>Rupee 1,500</p>
                 <br>
-                <button class="add-to-cart" data-product="BIG TORCH LIGHT" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/6638b754950fb25829b96ed8/1_-6-2-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="BIG TORCH LIGHT" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/6638b754950fb25829b96ed8/1_-6-2-480x480.jpg" data-price=1500>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -122,7 +122,7 @@
                 <br>
                 <p>Rupee 3,500</p>
                 <br>
-                <button class="add-to-cart" data-product="WOLF GARDEN 7 TOOL SET" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/6606a09501405ca92cd58eae/wolf-garten-7-tool-set-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="WOLF GARDEN 7 TOOL SET" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/6606a09501405ca92cd58eae/wolf-garten-7-tool-set-480x480.jpg" data-price=3500>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -131,7 +131,7 @@
                 <h3>BALWAAN MANUAL AGRICULTURAL SEEDER</h3>
                 <p>Rupee 4,600</p>
                 <br>
-                <button class="add-to-cart" data-product="BALWAAN MANUAL AGRICULTURAL SEEDER" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/663895e6b0cbcb028f3a3d58/1_-4-1-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="BALWAAN MANUAL AGRICULTURAL SEEDER" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/663895e6b0cbcb028f3a3d58/1_-4-1-480x480.jpg" data-price=4600>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -141,7 +141,7 @@
                 <br>
                 <p>Rupee 2,700</p>
                 <br>
-                <button class="add-to-cart" data-product="SOIL CRUMBLER TOOL" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069b0a14ff5b39380e5691/bharat-agrotech-weeder-soil-crumbler-tools-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="SOIL CRUMBLER TOOL" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069b0a14ff5b39380e5691/bharat-agrotech-weeder-soil-crumbler-tools-480x480.jpg" data-price=2700>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -151,7 +151,7 @@
                 <br>
                 <p>Rupee 1,500</p>
                 <br>
-                <button class="add-to-cart" data-product="EARTH AUGER BIT" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/660691e66cb6729449f6db49/earthaugerbit-8-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="EARTH AUGER BIT" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/660691e66cb6729449f6db49/earthaugerbit-8-480x480.jpg" data-price=1500>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -161,7 +161,7 @@
                 <br>
                 <p>Rupee 4,900</p>
                 <br>
-                <button class="add-to-cart" data-product="NEPTUNE PRESSURE HOSE" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069be7cc2819fd0015f4cc/8-5-mmx100-mtr-neptune-pressure-hose-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="NEPTUNE PRESSURE HOSE" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069be7cc2819fd0015f4cc/8-5-mmx100-mtr-neptune-pressure-hose-480x480.jpg" data-price=4900>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -171,7 +171,7 @@
                 <br>
                 <p>Rupee 6,000</p>
                 <br>
-                <button class="add-to-cart" data-product="NEPTUNE POWER SPRAYERS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069c061d3a4dfcf98aae73/ps-50-neptune-power-sprayers-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="NEPTUNE POWER SPRAYERS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069c061d3a4dfcf98aae73/ps-50-neptune-power-sprayers-480x480.jpg" data-price=6000>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -181,7 +181,7 @@
                 <br>
                 <p>Rupee 15,000</p>
                 <br>
-                <button class="add-to-cart" data-product="NEPTUNE CHAINSAW MACHINE" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069c3b15f5fb2b71edbf79/cs-58-neptune-chainsaw-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="NEPTUNE CHAINSAW MACHINE" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66069c3b15f5fb2b71edbf79/cs-58-neptune-chainsaw-480x480.jpg" data-price=15000>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -191,7 +191,7 @@
                 <br>
                 <p>Rupee 400 per KG </p>
                 <br>
-                <button class="add-to-cart" data-product="CORIANDER SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/664ae03d089b67a6b2294ffb/namdhari-ns-surabhi-coriander-seeds-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="CORIANDER SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/664ae03d089b67a6b2294ffb/namdhari-ns-surabhi-coriander-seeds-480x480.jpg" data-price=400>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -201,7 +201,7 @@
                 <br>
                 <p>Rupee 200 per KG</p>
                 <br>
-                <button class="add-to-cart" data-product="BOTTLE GOURD SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66056a53ba076ce1d82b1a1c/vnr-bottle-gourd-sarita-f1-hybrid-seed-sw-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="BOTTLE GOURD SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66056a53ba076ce1d82b1a1c/vnr-bottle-gourd-sarita-f1-hybrid-seed-sw-480x480.jpg" data-price=200>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -211,7 +211,7 @@
                 <br>
                 <p>Rupee 550 KG</p>
                 <br>
-                <button class="add-to-cart" data-product="HYBRID CHILLI SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66067447a4305d754cc37c8c/vnr-unnati-_60-13_-hybrid-chilli-seeds-10gm-sw-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="HYBRID CHILLI SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66067447a4305d754cc37c8c/vnr-unnati-_60-13_-hybrid-chilli-seeds-10gm-sw-480x480.jpg" data-price=550>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -221,7 +221,7 @@
                 <br>
                 <p>Rupee 400 per KG</p>
                 <br>
-                <button class="add-to-cart" data-product="HYBRID BRINJAL SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/663828d3950fb25829b3b7e3/rosy-hybrid-brinjal-seeds-480x480.png">Add to Cart</button>
+                <button class="add-to-cart" data-product="HYBRID BRINJAL SEEDS" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/663828d3950fb25829b3b7e3/rosy-hybrid-brinjal-seeds-480x480.png" data-price=400>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -231,7 +231,7 @@
                 <br>
                 <p>Rupee 500</p>
                 <br>
-                <button class="add-to-cart" data-product="BIOFIT SOIL ENHANCEMENT" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/6655626e6841b2b3e9ba3440/1-s-h-e-t-soil-helth-enhancement-technology-1-netsurf-biofit-original-imagkhg5urgwzmdk-480x480.webp">Add to Cart</button>
+                <button class="add-to-cart" data-product="BIOFIT SOIL ENHANCEMENT" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/6655626e6841b2b3e9ba3440/1-s-h-e-t-soil-helth-enhancement-technology-1-netsurf-biofit-original-imagkhg5urgwzmdk-480x480.webp" data-price=500>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -241,7 +241,7 @@
                 <br>
                 <p>Rupee 300</p>
                 <br>
-                <button class="add-to-cart" data-product="BIOFIT CULTURE BANNER" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66555b0a9625686061186d21/biofit-culture-banner-mobile-480x480.jpg">Add to Cart</button>
+                <button class="add-to-cart" data-product="BIOFIT CULTURE BANNER" data-image="https://www.kisanshop.in/s/65f83b39d13b931b1c1f1a9b/66555b0a9625686061186d21/biofit-culture-banner-mobile-480x480.jpg" data-price=300>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -251,7 +251,7 @@
                 <br>
                 <p>Rupee 399</p>
                 <br>
-                <button class="add-to-cart" data-product="SLURRY BUGS" data-image="https://imgs.search.brave.com/HPIjGhCrGP9FbsXik7v0lSBNloj73bd1urjI5znyAxg/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93d3cu/d3lubnN0YXkuY28u/dWsvbWVkaWEvY2F0/YWxvZy9wcm9kdWN0/L2NhY2hlL2E1ODli/MDBhOTIyYWNlYzcx/MzhiNWU5NmI4ODk3/OTgwLzYvMS82MTUz/Nl9zbHVycnlidWdz/LW5ldy13ZWItMjAy/MS5qcGc">Add to Cart</button>
+                <button class="add-to-cart" data-product="SLURRY BUGS" data-image="https://imgs.search.brave.com/HPIjGhCrGP9FbsXik7v0lSBNloj73bd1urjI5znyAxg/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93d3cu/d3lubnN0YXkuY28u/dWsvbWVkaWEvY2F0/YWxvZy9wcm9kdWN0/L2NhY2hlL2E1ODli/MDBhOTIyYWNlYzcx/MzhiNWU5NmI4ODk3/OTgwLzYvMS82MTUz/Nl9zbHVycnlidWdz/LW5ldy13ZWItMjAy/MS5qcGc" data-price=399>Add to Cart</button>
             </div>
         </div>
         <div class="product">
@@ -261,7 +261,7 @@
                 <br>
                 <p>Rupee 1,300</p>
                 <br>
-                <button class="add-to-cart" data-product="FERTILISERS NATURAL LAWN FOOD" data-image="https://imgs.search.brave.com/drHH_fhUJmuxO3TIdIn_HSlkViQJxzCCyoL4KEHszZQ/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/Ym9idmlsYS5jb20v/d3AtY29udGVudC91/cGxvYWRzLzIwMjMv/MDYvYmVzdF9sYXdu/X2ZlcnRpbGl6ZXJf/Zm9yX3NwcmluZ19v/cHRpb24uanBnP3c9/Njc1">Add to Cart</button>
+                <button class="add-to-cart" data-product="FERTILISERS NATURAL LAWN FOOD" data-image="https://imgs.search.brave.com/drHH_fhUJmuxO3TIdIn_HSlkViQJxzCCyoL4KEHszZQ/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/Ym9idmlsYS5jb20v/d3AtY29udGVudC91/cGxvYWRzLzIwMjMv/MDYvYmVzdF9sYXdu/X2ZlcnRpbGl6ZXJf/Zm9yX3NwcmluZ19v/cHRpb24uanBnP3c9/Njc1" data-price=1300>Add to Cart</button>
             </div>
         </div>
     </div>
@@ -271,6 +271,7 @@
         <ul id="cart-items"></ul>
         <br>
         <center><button id="checkout">Checkout</button></center>
+        <center><h2>Total price : <span id="dyna">0</span></h2></center>
     </div>
     <br><br><br><br>
     <br><br>
